# CProject

./: .gitignore  .igitignore  test.txt
FileLoad/: CMakeLists.txt  conanfile.txt  main.c
GUI/: CMakeLists.txt  GTK_CSS.c  GTK_XML.c  GTK_XML_layout.c  GTK_hello_word.c
GUI/head/: io_utils.h  time_utils.h
GUI/include/: tinycthread.c
GUI/xml/: builder.ui.xml  builder.ui2.xml  builder.ui2.xml~  builder.ui3.xml~
HelloWorldC/: ArrayTest.c  CMakeLists.txt  CharTest.c  IntTest.c  LinkedList.c  Pointer.c  Test.c  atomic_types.c  basic_time.c  byte_order.c  calendar.c  callback.c  character_type.c  complex_thread_result.c  conan.c  conversion.c  copy_file.c  count_characters.c  errorno.c  find_char_and_substring.c  format_time.c  get_sys_time.c  handeta.c  head.c  hello.c  io_basic.c  lock.c  mem_op.c  memory.c  other_operations.c  parse_time.c  position.c  read_write_a_character.c  read_write_certain_bytes.c  redirect_stdout.c  serilalization.c  setbuf.c  string_concat_copy.c  string_length_compare.c  string_tokenize.c  (+7 more)
HelloWorldC/head/: head.h  io_utils.h  time_utils.h
Tinyhttpd-master/: Makefile  client  conanfile.txt  httpd
Tinyhttpd-master/Tinyhttpd/: README.md  client  httpd  httpd.c
calculate/: CMakeLists.txt  calculator.c  calculator.h  cases.txt  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  main.c  operation.h  opertaion.c  ui.h
calculate/ui/: calculatior.ui~  calculatior.xml  calculatior.xml~  calculator.xml  calculator.xml~  style.css
